--- a/Random Colour Changer/index.html
+++ b/Random Colour Changer/index.html
@@ -14,25 +14,31 @@
 
     <style>
         .container{
-            display: grid;  
+            display: grid;
+            background-color:plum;
+            border-radius: 20px; 
+             
         }
         #btn {
-            margin: 30% auto;
+            margin: 25% auto;
             width: 10rem;
         }
         .heading{
             text-align: center;
+            color: crimson;
         }
+            
     </style>
 </head>
 
 <body>
-    <h1 class="heading">Welcome</h1>
+    <h1 class="heading">Welcome to the club</h1>
     <div class="container">
-        <button class="btn btn-outline-primary btn-lg" id="btn">Click me 😉</button>
+        <button class="btn btn-outline-primary btn-lg" id="btn">Press me 😉</button>
     </div>
 
     <script src="script.js"></script>
+    <script></script>
 </body>
 
 </html>
