--- a/Todo List App/index.html
+++ b/Todo List App/index.html
@@ -58,7 +58,7 @@
             <input class="form-control m-auto" type="text" name="add" />
         </form>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 
